fix mozilla scrollbars

--- a/app/assets/stylesheets/channel.css
+++ b/app/assets/stylesheets/channel.css
@@ -114,6 +114,7 @@
   justify-content: flex-end; */
   overflow-y: scroll;
   flex: 1 1 auto;
+  scrollbar-width: none;
 }
 
 .message-window-scroller::-webkit-scrollbar {
